# gallery_qt

./: .gitignore  CMakeLists.txt  README.md
gallery-core/: CMakeLists.txt  album.cpp  album.h  album_dao.cpp  album_dao.h  album_model.cpp  album_model.h  database_manager.cpp  database_manager.h  picture.cpp  picture.h  picture_dao.cpp  picture_dao.h  picture_model.cpp  picture_model.h
gallery-core/include/: gallery-core_global.h  picture.h
gallery-core/include/db/: database_manager.h
gallery-core/include/db/dao/: album_dao.h  picture_dao.h
gallery-core/include/models/: album_model.h
gallery-core/src/: album.cpp  picture.cpp
gallery-core/src/db/: database_manager.cpp
gallery-core/src/db/dao/: album_dao.cpp  picture_dao.cpp
gallery-core/src/models/: album_model.cpp  picture_model.cpp
gallery-desktop/: CMakeLists.txt  album_list_widget.cpp  album_list_widget.h  album_list_widget.ui  album_widget.cpp  album_widget.h  album_widget.ui  gallery_widget.cpp  gallery_widget.ui  mainwindow.cpp  mainwindow.ui  picture_delegate.cpp  picture_delegate.h  picture_widget.cpp  picture_widget.ui  thumbnail_proxy_model.cpp  thumbnail_proxy_model.h
